# curlify3

./: Justfile  README.md  pyproject.toml  test_curlify3.py
.github/workflows/: pypi.yml  tests.yml
curlify3/: __init__.py  _base.py  _curl.py  _errors.py  _req_aiohttp.py  _req_httpx.py  _req_requests.py  _req_starlette.py  _utils.py
curlify3/asyncio/: __init__.py  _utils.py
curlify3/libraries/: _httpx.py  _requests.py  _starlette.py
