[tool.poetry]
name = "curlify3"
version = "0.1.0"
description = "yet another library to convert request object to curl command"
authors = ["A.Shpak <aleksander.shpak.als@gmail.com>"]
readme = "README.md"
repository = "https://github.com/shpaker/curlify3"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
requests = "^2.32.3"
httpx = "^0.27.2"
fastapi = "^0.115.4"
isort = "^5.13.2"
aiohttp = "^3.10.10"
pytest-aiohttp = "^1.0.5"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-httpx = "^0.33.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 120
include_trailing_comma = true
lines_between_types = 1

[tool.black]
line-length = 120
skip-string-normalization = true
